1999-02-07  Jochen Wiedmann  <joe@ispsoft.de> (0.1125)

	* lib/HTML/EP.pm (ep_if): Added neval and cnd attributes.
	* Further work on POP3 client.
	* Work on the docs.
	* Made BUILTIN_FUNCS a lot smaller by creating the 'default'
	  attribute of $func dynamically.
	* lib/HTML/EP/Locale.pm (_ep_language): The multiline version
	  of _ep_language should now hopefully be equivalent to
	  <ep-if cnd="'$_ep_language'eq'lang'> ... </ep-if>. It is
	  no longer required to terminate any ep-language, only the
	  last one must be terminated.
	* lib/HTML/EP.pm (CgiRun): Fixed bug: ParseVars was not
	  called with _ep_exit.
	* lib/HTML/EP.pm: Added ep-debug.

1999-02-01  Jochen Wiedmann  <joe@ispsoft.de> (0.1124)

	* Added partial POP3 client example.

1999-01-13  Jochen Wiedmann  <joe@ispsoft.de> (0.1123)

	* lib/HTML/EP.pm (_ep_query): $start_at was not set to 0 when using
	  LIMIT.
	* lib/HTML/EP.pm (_ep_set): Fixed missing "if $debug".
	* Added CGI::Cookie and URI::Escape to prerequisited.
	* lib/HTML/EP.pm (CgiRun): $ENV{'DOCUMENT_ROOT'} was not correctly
	  handled.

1999-01-09  Jochen Wiedmann  <joe@ispsoft.de> (0.1122)

	* lib/HTML/EP.pm: Added ep-redirect.
	* lib/HTML/EP.pm: Added ep-set.

1998-12-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1121)

	* Added examples/admin/squid_simple.ep.
	* Makefile.PL: Added option --config.

1998-12-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1120)

	* lib/HTML/EP/Examples/Admin.pm (_ep_html_ep_examples_admin_squid):
	  Added call of /usr/local/bin/usersModified --squid.

1998-12-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1119)

	* lib/HTML/EP.pm (ParseVar): _ep_custom_formats now defaults
	  to calling $self->_format_METHODNAME.
	* lib/HTML/EP.pm (_ep_package): Fixed error handling in
	  _ep_package.
	* Added examples/glimpse and lib/HTML/EP/Examples/Glimpse.pm.
	* lib/HTML/EP.pod: Fixed ep-error docs.
	* examples/admin/mail2group: Fixed some bugs that are
	  resending mails too frequently.
