@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-#	Mofigications:
+#	Modigications:
 #
 #		25.12.1998, Jochen Wiedmann
 #			Mails werden nicht mehrfach weitergeleitet;
